Fix z-index (#1624)

--- a/packages/theme/styles/components.scss
+++ b/packages/theme/styles/components.scss
@@ -420,7 +420,7 @@
   .scroller-thead {
     position: sticky;
     top: 0;
-    z-index: 999;
+    z-index: 2;
     background-color: var(--body-color);
   }
 }
